skip the "can't open file" error message, if the file is

1) a local file
2) it just doesn't exit

this avoids error messages for the usual case like

kate <somenewfile.txt>

on the command line or file dialog.

Still you will get errors if just permissions are not ok for file open
or if some kio problems arises with remote urls

BUG: 315261

if somebody likes to do so, I guess this could be even backported